--- a/environment-python3.yml
+++ b/environment-python3.yml
@@ -2,19 +2,6 @@ name: python3
 channels:
 - ome
 dependencies:
-# ome
 - zeroc-ice36-python
-# conda-forge
-#- ipywidgets=7.4.*
-#- pillow=6.*
-#- pytables=3.4.*
-#- pytest=5.2.*
-#- python=3.6.*
-#- scikit-image=0.16.*
-#- scipy=1.3.*
-
-# 依赖
-- numpy
-- pandas
-- matplotlib
-- seaborn
+- matplotlib=3.1.*
+- pandas=0.25.*
